style.css
* {
    box-sizing: border-box;
    margin: 0;
}

body {
    background-color: rgb(247, 241, 232);
    font-family: 'IM Fell DW Pica', serif;
}

.main-header {
    text-align: center;
    padding-top: 10px;
    border-bottom: rgb(97, 97, 97) 2px solid;
    z-index: 500;
    background-color: rgb(31, 7, 2);
    color: rgb(247, 241, 232);
    font-size: 62px;
    text-align: left;
    padding-left: 150px;
    font-weight: 100;
}

.side-bar {
    width: 20%;
    background-color: rgb(231, 218, 198);
    display: block;
    font-family: 'Fredoka', sans-serif;
    box-shadow: 3px 3px 8px -1px rgba(97, 97, 97, 1);
    z-index: 100;
}

.aside-section-title {
    padding: 10px;
    padding-left: 25px;
    display: flex;
    align-items: center;
    justify-content: space-between;
    font-size: 35px;
}

.user-list {
    display: block;
    padding: 15px;
    font-family: 'Fredoka', sans-serif;
    font-size: 25px;
}

.user-info {
    padding: 10px;
    display: flex;
    justify-content: space-between;
}

.user-init {
    margin-right: 100px;
}

.both-sections {
    display: flex;
}

.view-hide-btn {
    width: 60px;
    height: 60px;
    font-family: 'Fredoka', sans-serif;
    font-size: 20px;
}

.clear-btn-container {
    padding-top: 10px;
    display: flex;
    justify-content: center;

}

.clear-btn {
    width: 15vw;
    height: 35px;
    font-family: 'Fredoka', sans-serif;
    font-size: 20px;
}

.main-body {
    display: block;
    width: 80%;
}

.scoreboard {
    display: block;
    justify-content: space-around;
    padding: 15px;
    padding-top: 8px;
    margin-left: 20%;
    margin-right: 20%;
    border-radius: 0 0 20px 20px;
    background-color: rgb(231, 218, 198);
    box-shadow: 0px 12px 13px -10px rgba(0, 0, 0, 0.49);
    font-family: 'Fredoka', sans-serif;
}

.scoreboard-header {
    width: 100%;
    text-align: center;
    padding: 5px;
    font-size: 26px;
    font-weight: bold;
}

.timer {
    display: flex;
    border-top: solid rgb(206, 191, 172) 1px;
    border-right: solid rgb(206, 191, 172) 1px;
    padding: 20px;
    padding-left: 50px;
    width: 250px;
    text-align: center;
    font-size: 22px;
    font-weight: bold;
    color: rgb(85, 85, 85);

}

.score-correct {
    display: flex;
    padding-left: 30px;
    padding-right: 30px;
}

.score-meter {
    display: flex;
    justify-content: center;
    align-items: center;
    border-top: solid rgb(206, 191, 172) 1px;
    padding: 20px;
    width: 500px;
    font-size: 22px;
    font-weight: bold;
    color: rgb(85, 85, 85);
}

.scoreboard-content {
    display: flex;
    justify-content: center;
}

.correct-count-digit {
    padding-right: 8px;
}
.countdown {
    padding-left: 8px;
}

.welcome-page {
    margin: 3vw;
    text-align: center;
    padding: 30px;
    padding-bottom: 250px;
    height: 670px;
    background-color: rgb(243, 239, 239);
    box-shadow: 0px 0px 7px 2px rgba(0, 0, 0, 0.49);
}

.quiz-greeting {
    padding-top: 100px;
    padding-bottom: 50px;
    font-size: 54px;
    color: rgb(66, 19, 10);
}

.italicized-span {
    font-style: italic;
}

.seconds-scored {
    font-family: 'Fredoka', sans-serif;
    color: rgb(39, 39, 39);
    font-size: 50px;
}

.challenge-paragraph {
    padding: 25px;
    font-size: 40px;
    color: rgb(44, 44, 44);
}

.quiz-instruction {
    padding: 15px;
    padding-bottom: 80px;
    font-size: 30px;
    color: rgb(109, 87, 67);
}

.start-quiz-btn {
    width: 250px;
    height: 60px;
    font-family: 'Fredoka', sans-serif;
    font-size: 30px;
}

.all-challanges {
    text-align: center;
}

.challenge {
    margin: 3vw;
    text-align: center;
    padding: 30px;
    padding-bottom: 250px;
    height: 670px;
    background-color: rgb(243, 239, 239);
    box-shadow: 0px 0px 7px 2px rgba(0, 0, 0, 0.49);

}

.question {
    padding-top: 50px;
    padding-left: 280px;
    padding-bottom: 50px;
    text-align: left;
    font-size: 30px;
    color: rgb(107, 45, 36);
}

.list-of-answers {
    display: block;
    align-items: center;
    padding-left: 280px;
    padding-bottom: 30px;
    text-align: left;
    font-family: Arial, Helvetica, sans-serif;

}

.option {
    width: 44vw;
    height: auto;
    margin-bottom: 30px;
    display: flex;
    align-items: center;
    padding: 10px;
    font-size: 22px;
    font-family: 'Fredoka', sans-serif;
    font-size: 25px;
}

.answer-option {
    width: 50px;
    height: 50px;
    background-color: rgb(225, 224, 223);
    border-radius: 50px;
    display: flex;
    font-size: 24px;
    justify-content: center;
    align-items: center;
    margin-right: 30px;
}

.results-page {
    margin: 3vw;
    text-align: center;
    padding: 30px;
    padding-bottom: 250px;
    height: 670px;
    background-color: rgb(243, 239, 239);
    box-shadow: 0px 0px 7px 2px rgba(0, 0, 0, 0.49);

}

.results-page {
    padding-top: 50px;
    padding-bottom: 100px;
}

.results-heading {
    padding: 25px;
    padding-top: 20px;
    font-size: 54px;
    color: rgb(66, 19, 10);
}

.score-placment {
    padding: 15px;
    padding-bottom: 50px;
    padding-bottom: 10px;
    font-size: 34px;
    color: rgb(66, 19, 10);
}

.verdict1 {
    padding-top: 20px;
    font-size: 40px;
    color: rgb(9, 179, 0);
}

.verdict2 {
    padding-top: 20px;
    font-size: 40px;
    color: rgb(201, 0, 0);
}

.final-instruction {
    font-size: 30px;
    font-weight: 500;
    padding-top: 30px;
    color: rgb(44, 44, 44);
}

.final-form {
    padding: 15px;
    display: grid;
    justify-content: center;
}

.submit-init-btn {
    width: 170px;
    height: 80px;
    border-radius: 0 0 25px 25px;
    font-family: 'Fredoka', sans-serif;
    font-size: 30px;
    border-color: rgb(243, 239, 239);

}

.user-init-input {
    width: 170px;
    height: 80px;
    border-radius: 25px 25px 0 0;
    border-color: rgb(243, 239, 239);
    text-align: center;
    font-size: 50px;
    font-family: 'IM Fell DW Pica', serif;
    color: rgb(29, 29, 130);
}

.hidden {
    display: none;
}

